# setmac

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  Package.swift  README.md  justfile  pyproject.toml
.cursor/rules/: release-policy.mdc
.cursor/skills/setmac-release-ops/: SKILL.md
.github/workflows/: ci.yml  release-beta.yml  release-canary.yml  release-stable.yml  release.yml
Resources/: Info.plist  tools.json
Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
Resources/configs/: tmux.conf  zshrc
Resources/configs/ghostty/: config
Resources/configs/hammerspoon/: init.lua
Resources/configs/karabiner/: karabiner.json
Resources/configs/nvim/lua/plugins/: black-metal.lua
Sources/App/: ContentView.swift  RigApp.swift  SetmacApp.swift
Sources/Models/: InstallState.swift  ToolManifest.swift
Sources/Navigation/: DetailView.swift  SidebarItem.swift  SidebarView.swift
Sources/Services/: CLIBridge.swift  ManifestLoader.swift
Sources/Views/: AppStoreToolCard.swift  AuthPasswordSheetView.swift  CategoryDetailView.swift  ConfigsView.swift  LogOutputView.swift  OverviewView.swift  SearchResultsView.swift  ToolCardView.swift
Sources/Views/Settings/: AboutView.swift
cli/: pyproject.toml
cli/src/rig/: __init__.py  __main__.py  cli.py  output.py
cli/src/rig/commands/: configs.py  install.py  status.py
cli/src/rig/installers/: base.py
cli/src/setmac/: __init__.py  __main__.py  cli.py  output.py  registry.py
cli/src/setmac/commands/: configs.py  install.py  status.py
cli/src/setmac/installers/: base.py
docs/: ai-maintainer-playbook.md
releasetools/: __init__.py  commit_parser.py
scripts/: build-cli.sh  bundle.sh  dmg.sh  generate-icon.sh  notarize-release.sh  release-build.sh  sign-release.sh
