[project]
name = "setmac-cli"
version = "1.1.1"
description = "setmac — macOS setup automator"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
setmac = "setmac.cli:main"

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setmac"]
